# lcstate

./: .gitignore  README.md  lar.wqm.ultimate.json  meson.build  snapcraft.yaml
lgdm/: gl-desktop-action.c  gl-desktop-action.h  gl-interval-dialog.c  gl-interval-dialog.h  gl-layout-manager.c  gl-layout-manager.h  gl-layout.c  gl-layout.h  gl-select-device.c  gl-select-device.h  gl-service-log.c  gl-service-log.h  gl-status-action.c  gl-status-action.h  gl-string-dialog.c  gl-string-dialog.h  gl-system-login.c  gl-system-login.h  lgdm-app-launcher.c  lgdm-app-launcher.h  lgdm-app.xml  lgdm-desktop-place.c  lgdm-desktop-place.h  lgdm-desktop.c  lgdm-desktop.h  lgdm-sidebar.c  lgdm-sidebar.h  lgdm-state.c  lgdm-state.h  lgdm-state.xml  lgdm-status.c  lgdm-status.h  lgdm.resources.xml  main.c  meson.build
lgdm/desktop/: .xsession  01-firstrun  Makefile.am  app-interface.xml  application-interface.xml  aptmanager-interface.xml  desktop-objectmanager.xml  gdmcatalog.xml  gl-app-info.c  gl-app-info.h  gl-app-launcher.c  gl-app-launcher.h  gl-application-object.c  gl-application-object.h  gl-boolean-dialog.c  gl-boolean-dialog.h  gl-combo-dialog.c  gl-combo-dialog.h  gl-combo-row.c  gl-combo-row.h  gl-date-complete-dialog.c  gl-date-complete-dialog.h  gl-date-dialog.c  gl-date-dialog.h  gl-date-settings.c  gl-date-settings.h  gl-desktop-action.c  gl-desktop-action.h  gl-desktop-place.c  gl-desktop-place.h  gl-desktop.c  gl-desktop.h  gl-docking-plug.c  gl-docking-plug.h  gl-main-build.c  gl-main-build.h  gl-messages-objectmanager.xml  gl-sidebar.c  gl-sidebar.h  gl-signal-objectmanager.xml  (+33 more)
lgdm/desktop/lib/: Makefile.am  gl-action-LarKey.c  gl-action-LarKey.h  gl-action-Offline.c  gl-action-Offline.h  gl-action-Online.c  gl-action-Online.h  gl-action-Screenshot.c  gl-action-Screenshot.h  gl-action-widget.c  gl-action-widget.h  gl-app.c  gl-app.h  gl-connection.c  gl-connection.h  gl-control.c  gl-control.h  gl-controlbox.c  gl-controlbox.h  gl-curve.c  gl-curve.h  gl-date-settings.c  gl-date-settings.h  gl-date-time-window.c  gl-date-time-window.h  gl-draganddrop.c  gl-draganddrop.h  gl-eventbox.c  gl-eventbox.h  gl-extern-process.c  gl-extern-process.h  gl-indicate.c  gl-indicate.h  gl-level-manager.c  gl-level-manager.h  gl-level-notebook.c  gl-level-notebook.h  gl-log.c  gl-log.h  gl-manager.c  (+47 more)
lgdm/dialog/: boolean-dialog.ui  combo-dialog.ui  combo-row.ui  date-complete-dialog.ui  date_dialog.ui  date_settings.ui  interval-dialog.ui  log_interval.ui  service-log.ui  spinner-dialog.ui  statistic-dialog.ui  string-dialog.ui  time_setting.ui
lgdm/fonts/: Makefile.am
lgdm/layout/: desktop-action.ui  desktop-actions.ui  desktop.ui  lar-market.ui  layout-manager.ui  lgdm-app-main.ui  select-device.ui  select-item.ui  select-window.ui  service-log.ui  sidebar.ui  status-action.ui  status.ui  ultimate-samle-settings.ui  ultra-process-timing-layout.ui  user-login.ui
lgdm/row/: can-row.ui  client-error.ui  fake-user-row.ui  service-row.ui  user.ui
src/: main.c  meson.build  ultimate.gresource.xml
src/cliapp/: main.c  meson.build
src/core/: can.c  index.c  index.h  market-time.c  meson.build  mkt-log.c  mkt-log.h  mkt-utils.h  mktbus.h  node-analogext.c  node-digital.c  node-index.c  node-index.h  node-motor3.c  node.c  node.h  ultra-ams-dbus.c  ultra-ams-dbus.h  ultra-can-dbus.c  ultra-can-dbus.h  ultra-errors.xml  ultra-level.c  ultra-level.h  ultra-level.xml  ultra-panel-pc.c  ultra-panel-pc.h  ultra-pc.xml  wqm-analog.c  wqm-can.c  wqm-can.h
src/core/can4linux/: README
src/core/eds/: Makefile.am
src/ultra/: main.c  meson.build  ultra-state.c  ultra-state.h
ultra-control/: ChangeLog  Makefile.am  README  configure.ac  generate-ctags.sh  measurement.out  representations.aird  ultra.files  ultra.includes
ultra-control/debian/: README  changelog  control  copyright  files  rules  ultracontrol-doc.install.in  ultracontrol.install.in  ultracontrol.postinst
ultra-control/po/: POTFILES.in
ultra-control/src/: Makefile.am  killall_service  startApp
ultra-control/src/airflow-service/: Makefile.am  airflow-application-object.c  airflow-application-object.h  airflow-service.c  com.lar.tera.airflow.gschema.xml  com.lar.tera.airflow.service  ultra-airflow-object.c  ultra-airflow-object.h
ultra-control/src/axis-service/: ERRORS.md  Makefile.am  axis-application-object.c  axis-application-object.h  axis-object.c  axis-object.h  axisZ-object.c  axisZ-object.h  com.lar.tera.axis.service  control-ptp.c  control-ptp.h  d3go-object.c  d3go-object.h  d3sensor-object.c  d3sensor-object.h  inj-valve.c  inj-valve.h  move-axis.c  move-axis.h  move-object.c  move-object.h  ultra-axis-service.c  ultra-axis.c  ultra-axis.h
ultra-control/src/measurement-service/: Makefile.am  analyze-task.c  analyze-task.h  calibration-process.c  calibration-process.h  check-process.c  check-process.h  clean-dilution-task.c  clean-dilution-task.h  hold-task.c  hold-task.h  measurement-application-object.c  measurement-application-object.h  measurement-process.c  measurement-process.h  measurement-service.c  mkt-process-object.c  mkt-process-object.h  mkt-stirrer-object.c  mkt-stirrer-object.h  prepare-task.c  prepare-task.h  psanalyse-task.c  psanalyse-task.h  rinsing-task.c  temperatur-observer.c  temperatur-observer.h  ultimate-channel.c  ultimate-channel.h  ultimate-process-hold.c  ultimate-process-hold.h  ultimate-process-object.c  ultimate-process-object.h  ultimate-process-rinsing.c  ultimate-process-rinsing.h  ultra-channel-diff.c  ultra-channel-diff.h  ultra-channel-object.c  ultra-channel-object.h  ultra-control-process.c  (+52 more)
ultra-control/src/pumps-service/: Makefile.am  com.lar.tera.pumps.service  pumps-application-object.c  pumps-application-object.h  pumps-service.c  pumps_service
ultra-control/src/sequence-workings-service/: Makefile.am  com.lar.tera.measurement.gschema.xml  com.lar.tera.sequence.workers.service  sequence-process.c  sequence-process.h  sequence-workers-application-object.c  sequence-workers-application-object.h  sequence-workers-service.c  ultra-allhold-process.c  (+19 more)
(+215 files in other folders)
