service_sources = [
]

ultimate_deps = [
  dependency('gio-2.0'),
]

gnome = import('gnome')

# ultimate_sources += gnome.compile_resources('ultimate-resources',
  # 'ultimate.gresource.xml',
  # c_name: 'ultimate'
# )



subdir('gen')
# subdir('core')
# subdir('ultra')


# executable('ultimategui', ultimate_sources,
  # dependencies: ultimate_deps,
  # install: true,
# )
