## Process this file with automake to produce Makefile.in
## Author Sascha.Smolkov

pragmata_pro_font = \
	PragmataPro_Mono_R_0827.ttf  \
	PragmataPro_Mono_R_liga_0827.ttf  \
	PragmataProR_0827.ttf  \
	PragmataProR_liga_0827.ttf


awesome5_pro_font = \ 
	FontAwesome5Brands-Regular-400.otf  \
	FontAwesome5Pro-Light-300.otf  \
	FontAwesome5Pro-Regular-400.otf  \
	FontAwesome5Pro-Solid-900.otf

fontsdir = $(datarootdir)/fonts
nobase_fonts_DATA =  \
	 $(pragmata_pro_font) \
	 $(awesome5_pro_font)

EXTRA_DIST = \
	$(pragmata_pro_font) \
	$(awesome5_pro_font)

