## Process this file with automake to produce Makefile.in
## Created by Anjuta

candaemonedsdir = $(sysconfdir)/candaemon/eds
dist_candaemoneds_DATA =         \
	Digital.eds                  \
	Scan.eds                     \
	AnalogExt.eds                \
	lar_analognode_v15.eds       \
	lar_doppelmotornode_v12.eds  \
	lar_doppelmotornode_v13.eds
	

	